--- a/src/pages/cadastro/Cadastro.css
+++ b/src/pages/cadastro/Cadastro.css
@@ -1,8 +1,8 @@
 .fundoCadastro {
-  background-image: url("https://ik.imagekit.io/3ov0fr7b9/usuarios/freepik__upload__69855.png?updatedAt=1739793575086");
+  background-image: url("https://ik.imagekit.io/3ov0fr7b9/usuarios/2150169167.jpg?updatedAt=1739813560325");
   background-repeat: no-repeat;
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
 }
